# Style

./: CMakeLists.txt  cout.h  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  palette.h  stylesheet.css
